--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,8 @@
     "builds": [
       {
         "src": "./index.js",
-        "use": "@vercel/node"
+        "use": "@vercel/node",
+        "maxDuration": 120
       }
     ],
     "routes": [
@@ -11,11 +12,5 @@
         "src": "/(.*)",
         "dest": "/"
       }
-    ],
-
-    "functions": {
-      "./index.js": {
-        "maxDuration": 120
-      }
-    }
+    ]
 }
